<resources>
    <string name="app_name">Wallet Movie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Navigation Drawers-->
    <string name="nav_home">Home</string>
    <string name="action_clear_history">Clear Search History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title_des">Movie Title</string>
    <string name="signin_button_text">Sign in</string>
    <string name="no_account_signup">No account? Sign up</string>
    <string name="username_tv_hint">Username</string>
    <string name="password_tv_hint">Password</string>
    <string name="first_name_tv_hint">First name</string>
    <string name="last_name_tv_hint">Last name</string>
    <string name="email_tv_hint">Email address</string>
    <string name="confirm_password_tv_hint">Re-type password</string>
    <string name="update_button_text">Update</string>
    <string name="popup_add_to_favourites">Add to favourites</string>
    <string name="welcome_message_text">Wallet Movie is a free app. Here you can do a lot of cool things such as view movie details, search for movies or add movies to your favourites etc…\n\nYou can store your favourite movies and access them from anywhere by create an account or sign in as a guest to store your favourites movies locally.</string>
    <string name="signin_as_guest_btn">Sign in as guest</string>
    <string name="remove_movie_from_favourites_text">Remove from favourites</string>
    <string name="action_search_hint">Search movies by name, cast…</string>
    <string name="action_search"/>
    <string name="movie_vote_text">Vote:</string>
    <string name="movie_release_date_text">Released on:</string>
    <string name="movie_cast_list_text">Top Billed Casts</string>
    <string name="movie_cast_birthday_text">Birthday:</string>
    <string name="movie_cast_birth_place_text">Place of Birth:</string>
    <string name="movie_cast_credit_text">Known For</string>
    <string name="check_out_movies_for_cast">Movies For This Cast</string>
    <string name="title_activity_login_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="signin_text">Sign in</string>
    <string name="error_field_required">This field is required!</string>
    <string name="error_email_invalid">The email is invalid!</string>
    <string name="error_password_too_short">The password must be greater than 6 characters!</string>
    <string name="error_password_too_long">The password is too long!</string>
    <string name="error_password_fail_validate">Failed to validate password.</string>
    <string name="error_auth_fail">Authentication failed! Incorrect email or password!</string>
    <string name="error_name_invalid">The name input is invalid!</string>
    <string name="error_password_not_match">The passwords are not matched!</string>
    <string name="signup_text">Registration</string>
    <string name="ok">OK</string>
    <string name="dialog_title_registration_fail">Registration Failed</string>
    <string name="dialog_message_registration_fail">Opps! Something went wrong!\nFailed to register new user.</string>
    <string name="nav_clear_search_history">Clear Browsing History</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_account">Account</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_login">Login</string>
    <string name="action_sort_by_name">Sort by name</string>
    <string name="action_sort_by_date">Sort By Date</string>
    <string name="action_sort_by_vote">Sort by vote</string>

    <string name="or_text">Or</string>
    <string name="cancel">Cancel</string>
    <!--Toolbar title-->
    <string name="title_home">Home</string>
    <string name="title_movie_details">Movie Details</string>
    <string name="title_movie_list">Movies</string>
    <string name="title_search_result">Search Results</string>
    <string name="title_account">Account</string>
    <string name="title_cast_details">Cast Details</string>
    <string name="title_favourite_movies">Favourites</string>

    <!--Misc-->
    <string name="loading_text">Loading…</string>

    <!--social auth-->
    <string name="signin_with_google">Sign in With Google</string>
    <string name="facebook_app_id">140391126468632</string>
    <string name="overview_text">Overview</string>
    <string name="signup_btn">Sign up</string>
    <string name="signin_btn">Sign in</string>
    <string name="account_text">Account Information</string>
    <string name="cast_biography">Biography</string>
    <string name="no_movies_found">No movies found!</string>

    <string name="about_us">About us</string>
    <string name="about_us_text">About Us</string>
    <string name="about_us_des">This app is completely free to use and is a must-have for any movie lovers. The app offers a range of different features including viewing movie details, trailers, casts etc…Users can also search for movies as well as bookmark movies as their favourites. The app is frequently updated to improve the performance and provide best user experience.</string>
    <string name="attribute_title">Credits</string>
    <string name="attribute_des">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="welcome_title">Howdy!</string>
    <string name="guest">Guest</string>
    <string name="display_in_list">Display in list</string>
    <string name="display_in_grid">Display in grid</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change password</string>
    <string name="change_email_address">Change email address</string>
    <string name="reenter_password_dialog_text">For security reasons, you must re-enter your password to execute this sensitive action!</string>
    <string name="alert">Attention</string>
    <string name="proceed_btn">Proceed</string>
    <string name="change_password_dialog_title">Update password</string>
    <string name="old_password_hint">Old password</string>
    <string name="new_password_hint">New password</string>
    <string name="reset_password_text">Reset password</string>
    <string name="change_email_dialog_title">Update email</string>
    <string name="old_email_label">Old email:</string>
    <string name="new_email_tv_hint">New email</string>
    <string name="forgot_password_reset">Forgot password? Reset now</string>
    <string name="title_about">About</string>
    <string name="loading">Loading...</string>
    <string name="no_casts_found">No casts found!</string>
    <string name="clear_history_dialog_title">Clear History</string>
    <string name="clear_history_dialog_message">Are you sure you want to clear your browsing history?</string>
    <string name="signout_dialog_title">Signout Confirmation</string>
    <string name="signout_dialog_message">Are you sure you want to sign out?</string>
    <string name="success_add_movie">Successfully added to your favourite!</string>
    <string name="fail_add_movie">Error! Failed to complete the task</string>
    <string name="movie_exist">This movie has already been in your favourite</string>
    <string name="default_snackbar_error_message">Opps! Something went wrong!</string>
    <string name="success_delete_movie">Successfully removed from favourites!</string>
    <string name="fail_delete_movie">Error! Trouble removing the movie from favourites</string>
    <string name="dialog_user_registration_title">User Registration</string>
    <string name="dialog_user_registration_message">Registering user...</string>
    <string name="email_exist">Email has already been registered!</string>

</resources>
