<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home_white_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_nav_favorite_white_24dp"
            android:title="@string/nav_favourites" />
        <item
            android:id="@+id/nav_clear_search_history"
            android:icon="@drawable/ic_nav_clear_white_24dp"
            android:title="@string/nav_clear_search_history" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_nav_about_white_24dp"
            android:title="@string/about_us" />
    </group>

    <item
        android:id="@+id/auth"
        android:title="Profile">
        <menu>

            <group
                android:id="@+id/nav_authenticated_group"
                android:checkableBehavior="single"
                android:visible="false">

                <!--will be implemented soon-->
                <!--<item-->
                    <!--android:id="@+id/nav_profile"-->
                    <!--android:icon="@drawable/ic_nav_profile_white_24dp"-->
                    <!--android:title="@string/nav_profile"/>-->

                <item
                    android:id="@+id/nav_signout"
                    android:icon="@drawable/ic_nav_signout_white_24dp"
                    android:title="@string/nav_logout" />

            </group>
            
            <item
                android:id="@+id/nav_signin"
                android:icon="@drawable/ic_nav_signin_white_24dp"
                android:title="@string/nav_login"/>

        </menu>
    </item>

</menu>
