<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nguyen.paul.thanh.walletmovie.fragments.ProfileFragment">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/first_name"
        android:hint="@string/first_name_tv_hint"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/last_name"
        android:hint="@string/last_name_tv_hint"
        app:layout_constraintLeft_toLeftOf="@+id/first_name"
        app:layout_constraintRight_toRightOf="@+id/first_name"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/email_tv_hint"
        app:layout_constraintLeft_toLeftOf="@+id/last_name"
        app:layout_constraintRight_toRightOf="@+id/last_name"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/password_tv_hint"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        app:layout_constraintRight_toRightOf="@+id/email"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirm_password"
        android:hint="@string/confirm_password_tv_hint"
        app:layout_constraintLeft_toLeftOf="@+id/password"
        app:layout_constraintRight_toRightOf="@+id/password"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:text="@string/update_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_btn"
        app:layout_constraintRight_toRightOf="@+id/confirm_password"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

</android.support.constraint.ConstraintLayout>
