<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context="com.nguyen.paul.thanh.walletmovie.fragments.ChangePasswordDialogFragment">

        <TextView
            android:text="@string/change_password_dialog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_title"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/old_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title"
            app:layout_constraintLeft_toLeftOf="@+id/dialog_title"
            app:layout_constraintRight_toRightOf="@+id/dialog_title"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/old_password_hint"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:fontFamily="sans-serif-condensed"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_email_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/old_email"
            app:layout_constraintLeft_toLeftOf="@+id/old_email"
            app:layout_constraintRight_toRightOf="@+id/old_email"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/new_password_hint"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:fontFamily="sans-serif-condensed"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/new_email_wrapper"
            app:layout_constraintLeft_toLeftOf="@+id/new_email_wrapper"
            app:layout_constraintRight_toRightOf="@+id/new_email_wrapper"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/confirm_password_tv_hint"
                android:inputType="textPassword"
                android:imeOptions="flagNoExtractUi"
                android:fontFamily="sans-serif-condensed"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/proceed_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/positive_btn"
            app:layout_constraintTop_toTopOf="@+id/negative_btn"
            app:layout_constraintRight_toRightOf="@+id/password_wrapper"/>

        <Button
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/negative_btn"
            app:layout_constraintLeft_toLeftOf="@+id/password_wrapper"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/password_wrapper"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintVertical_bias="0.0"/>


    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
