<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context="com.nguyen.paul.thanh.walletmovie.fragments.ResetPasswordDialogFragment">

        <TextView
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_text"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:id="@+id/textView"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintRight_toRightOf="@+id/textView">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_tv_hint"
                android:inputType="textEmailAddress"
                android:id="@+id/email"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/proceed_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/positive_btn"
            app:layout_constraintRight_toRightOf="@+id/email_wrapper"
            app:layout_constraintTop_toTopOf="@+id/negative_btn"/>

        <Button
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/negative_btn"
            app:layout_constraintLeft_toLeftOf="@+id/email_wrapper"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/email_wrapper"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintVertical_bias="0.66"
            />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
