<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
                                             android:background="@color/colorBackgroundDark"
    tools:context="com.nguyen.paul.thanh.walletmovie.activities.WelcomeActivity">

    <TextView
        android:text="@string/welcome_message_text"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_message"
        android:layout_width="0dp"
        app:layout_constraintRight_toRightOf="@+id/welcome_title"
        app:layout_constraintLeft_toLeftOf="@+id/welcome_title"
        app:layout_constraintHorizontal_bias="1.0"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_title"/>

    <Button
        android:text="@string/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signup_btn"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        android:background="@color/colorCardDark"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="normal|bold"
        android:elevation="@dimen/cardview_elevation"
        app:layout_constraintLeft_toLeftOf="@+id/welcome_message"
        app:layout_constraintRight_toRightOf="@+id/welcome_message"/>

    <Button
        android:text="@string/signin_as_guest_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signin_as_guest_btn"
        android:background="@color/colorCardDark"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:elevation="@dimen/cardview_elevation"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/or_text"
        app:layout_constraintLeft_toLeftOf="@+id/or_text"
        app:layout_constraintRight_toRightOf="@+id/or_text"/>

    <TextView
        android:text="@string/welcome_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:text="@string/or_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/or_text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn"
        app:layout_constraintLeft_toLeftOf="@+id/signup_btn"
        app:layout_constraintRight_toRightOf="@+id/signup_btn"
        android:textAlignment="center"
        android:textStyle="normal|italic"
        android:textColor="@color/colorAccent"/>
</android.support.constraint.ConstraintLayout>
