<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@color/colorBackgroundDark"
                                                 tools:context="com.nguyen.paul.thanh.walletmovie.pages.about.AboutUsFragment">

        <TextView
            android:text="@string/about_us_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/about_us_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:text="@string/about_us_des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/about_us_des"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/about_us_title"
            app:layout_constraintRight_toRightOf="@+id/about_us_title"
            app:layout_constraintLeft_toLeftOf="@+id/about_us_title"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"/>

        <TextView
            android:text="@string/attribute_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/attribute_title"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/about_us_des"
            app:layout_constraintLeft_toLeftOf="@+id/about_us_des"
            app:layout_constraintRight_toRightOf="@+id/about_us_des"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorPrimaryText"
            android:textAlignment="center"
            android:textStyle="normal|bold"/>

        <TextView
            android:text="@string/attribute_des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/attribute_des"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/attribute_title"
            app:layout_constraintLeft_toLeftOf="@+id/attribute_title"
            app:layout_constraintRight_toRightOf="@+id/attribute_title"
            android:textAlignment="textStart"
            android:gravity="start"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="normal|italic"
            android:textSize="16sp"/>

        <ImageView
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/app_logo"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/attribute_des"
            app:layout_constraintLeft_toLeftOf="@+id/attribute_des"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0.65"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_width="70dp"
            android:layout_height="70dp"/>

        <ImageView
            app:srcCompat="@drawable/ic_tmdb_logo_green_square"
            android:tint="#01d277"
            android:id="@+id/tmdb_logo"
            app:layout_constraintTop_toTopOf="@+id/app_logo"
            app:layout_constraintRight_toRightOf="@+id/attribute_des"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_width="70dp"
            android:layout_height="70dp"/>
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>

